Tilpasset en masse småting

--- a/mmportalMVC/mmportalMVC.csproj
+++ b/mmportalMVC/mmportalMVC.csproj
@@ -142,6 +142,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="img\Blue_Logo Transparent.jpg" />
     <Content Include="img\Dollarblob.jpg" />
+    <Content Include="img\EkslusiveAgreement.jpg" />
+    <Content Include="img\StandardAgreement.png" />
     <Content Include="img\White_Logo Transparent.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
