Opsætning af model til DB og login/register funktionalitet

--- a/mmportalMVC/Views/Web.config
+++ b/mmportalMVC/Views/Web.config
@@ -32,7 +32,9 @@
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
-
+	<connectionStrings>
+		<add name="mellemmanden" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=mellemmanden;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\mellemmanden.mdf" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <system.web>
     <compilation>
       <assemblies>
