--- a/mmportalMVC/mmportalMVC.csproj
+++ b/mmportalMVC/mmportalMVC.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Blue_Logo Transparent.jpg" />
